--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,3 +3,19 @@ header {
   flex-direction: column;
   align-items: center;
 }
+
+.header__container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.icon--blue {
+  color: #1da1f2;
+  font-size: 2rem;
+}
+
+.header__explore > h2 {
+  font-weight: 400;
+}
+
