--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -3,7 +3,7 @@ footer {
   left: 0;
   bottom: 0;
   width: 100vw;
-  background-color: #1da1f2;
+  background-color: var(--main-site-color);
   height: 7.5vh;
   display: flex;
   align-items: center;
@@ -36,7 +36,7 @@ footer {
 }
 
 .btn--blue {
-  background-color: #1da1f2;
+  background-color: var(--main-site-color);
   color: #fff;
 }
 
