Created explore page

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,13 +1,16 @@
 header {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
+  width: 30%;
 }
 
 .header__container {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding-top: 20px;
+  padding-right: 120px;
 }
 
 .icon--blue {
