--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -1,5 +1,16 @@
+.search {
+  width: 100%;
+  border-left: 1px solid var(--light-gray);
+  border-right: 1px solid var(--light-gray);
+  border-bottom: 1px solid var(--light-gray);
+}
+
+.search > form {
+  padding: 15px;
+}
+
 .search__bar {
-  width: 450px;
+  width: 500px;
   height: 40px;
   position: relative;
 }
@@ -21,6 +32,7 @@
 	width: 100%;
 	font-size: 15px;
   text-indent: 50px;
+  padding-right: 20px;
 }
 
 .search__input:focus {
