--- a/src/styles/Timeline.css
+++ b/src/styles/Timeline.css
@@ -1,5 +1,6 @@
 .timeline {
- width: 600px;
+ width: 100%;
  border-left: 1px solid var(--light-gray);
  border-right: 1px solid var(--light-gray);
+ grid-column: 1 / 2 ;
 }
