Created sign up modal

--- a/src/styles/LogInModal.css
+++ b/src/styles/LogInModal.css
@@ -11,7 +11,7 @@
   background-color: rgba(0, 0, 0, 0.7);
 }
 
-.login {
+.modal__container {
   background-color: #fff;
   border-radius: 16px;
   width: 580px;
@@ -42,7 +42,7 @@
   align-items: center;
 }
 
-.login__form > label {
+.form__label {
   display: flex;
   flex-direction: column;
   border: none;
@@ -51,7 +51,7 @@
   padding-bottom: 25px;
 }
 
-.login__form > label > input {
+.form__label > input {
   border: 1px solid #cfd9de;
   border-radius: 4px;
   height: 100%;
@@ -60,7 +60,7 @@
   outline: none;
 }
 
-.login__form > label > input:focus {
+.form__label > input:focus {
   border: 1px solid var(--main-site-color);
   border-radius: 4px;
 }
