--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -1,8 +1,5 @@
 .search {
   width: 100%;
-  border-left: 1px solid var(--light-gray);
-  border-right: 1px solid var(--light-gray);
-  border-bottom: 1px solid var(--light-gray);
 }
 
 .search > form {
@@ -10,7 +7,7 @@
 }
 
 .search__bar {
-  width: 500px;
+  width: 85%;
   height: 40px;
   position: relative;
 }
