--- a/src/styles/SignUpCard.css
+++ b/src/styles/SignUpCard.css
@@ -5,7 +5,7 @@
   grid-column: 2 / 3;
   grid-row: 1 / 3;
   align-self: start;
-  margin: 15px 30px;
+  margin: 15px;
 }
 
 .card__container > .card__header {
