--- a/src/styles/Timeline.css
+++ b/src/styles/Timeline.css
@@ -1,6 +1,4 @@
 .timeline {
  width: 100%;
- border-left: 1px solid var(--light-gray);
- border-right: 1px solid var(--light-gray);
- grid-column: 1 / 2 ;
+ border-top: 1px solid var(--light-gray);
 }
